# takeout_interpreter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ReadME.MD  pyproject.toml  requirements.txt  taxonomy_creation.ipynb
notebooks/: 1_explore_generated_topics.ipynb
parsers/: parse_chrome_history.py
src/db/: ReadME.MD  snowflake_client.py  tables.py
src/parsers/: ReadMe.MD  parse_chrome_history.py  parse_google_analytics.py  parse_yt.py
src/topic_modeling/: ReadMe.md  config.py  data_models.py  db.py  gemini.py  llm.py  main.py  mock.py  pipeline.py  prompts.py  topic_classification.py  topic_classification_2.py  topic_discovery.py  topic_refinment.py  utils.py
takeout_dbt/: README.md  dbt_project.yml  profiles.yml
takeout_dbt/models/: chrome_history.sql  google_analytics.sql  sources.yml  youtube_history.sql
takeout_dbt/models/chrome_history/: int_sessions.sql  int_time_enrichment.sql  int_url_parts.sql
takeout_dbt/models/marts/: fct_browsing_activity_enriched.sql  generic_tests.yml
takeout_dbt/models/staging/: sources.yml  stg_sessions.sql  stg_time_enrichment.sql  stg_url_parts.sql
