[tool.poetry]
name = "takeout_interpreter"
version = "0.1.0"
description = ""
authors = ["evimont"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.1"
dbt-snowflake = "^1.10.0"
sqlalchemy = "^2.0.43"
dotenv = "^0.9.9"
snowflake-sqlalchemy = "^1.7.6"
google-generativeai = "^0.8.5"
json5 = "^0.12.1"
google-genai = "^1.30.0"
scikit-learn = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
